minor changes, mostly testing the branch

--- a/addNoise.ipynb
+++ b/addNoise.ipynb
@@ -2,71 +2,73 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import numpy as np\n",
-    "import time\n",
-    "# importing Qiskit\n",
-    "from qiskit import Aer, IBMQ\n",
-    "from qiskit import QuantumRegister, ClassicalRegister, QuantumCircuit\n",
-    "from qiskit import register, execute\n",
-    "\n",
-    "# import backend utilities\n",
-    "from qiskit.backends import JobStatus\n",
-    "\n",
-    "# import tomography library\n",
-    "import qiskit.tools.qcvv.tomography as tomo\n",
-    "\n",
-    "# useful additional packages \n",
-    "from qiskit.tools.visualization import plot_state\n",
-    "from qiskit.tools.qi.qi import *\n",
-    "from qiskit.wrapper.jupyter import *\n",
-    "from qiskit.backends.ibmq import least_busy\n",
-    "from CircuitTransitionGraph import *\n",
-    "\n",
-    "# import state tomography functions\n",
-    "from qiskit.tools.visualization import plot_histogram, plot_state\n",
-    "from parseRealization import *\n",
-    "%matplotlib inline\n",
-    "global testDir\n",
-    "\n",
-    "    \n",
-    "testDir=\"./tests/\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/george/.local/lib/python3.6/site-packages/qiskit/backends/ibmq/ibmqprovider.py:141: UserWarning: Credentials are already stored.\n",
-      "  warnings.warn('Credentials are already stored.')\n"
-     ]
-    }
-   ],
-   "source": [
-    "IBMQ.save_account('f5819f434faf55109be4d80d68984a810895c78102f2702d2851169dc7f9aa18ac03ce2e357e896df27f59455cc0f897faf4ab6ee599c2f23a16f01f521fbfb2')\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.030980110168457\n",
-      "0.00012159347534179688\n",
-      "0.00015473365783691406\n",
-      "0.00010180473327636719\n"
+      "1.1999268531799316\n",
+      "0.0009889602661132812\n",
+      "0.0\n",
+      "[[1, 0], [1, 2], [2, 3], [4, 3], [4, 10], [5, 4], [5, 6], [5, 9], [6, 8], [7, 8], [9, 8], [9, 10], [11, 3], [11, 10], [11, 12], [12, 2], [13, 1], [13, 12]]\n",
+      "0.0\n",
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "from qiskit import IBMQ \n",
+    "import time\n",
+    "IBMQ.backends()\n",
+    "IBMQ.save_account('f5819f434faf55109be4d80d68984a810895c78102f2702d2851169dc7f9aa18ac03ce2e357e896df27f59455cc0f897faf4ab6ee599c2f23a16f01f521fbfb2')\n",
+    "\n",
+    "# Load saved IBMQ accounts\n",
+    "start = time.time()\n",
+    "IBMQ.load_accounts()\n",
+    "end = time.time()\n",
+    "print(end-start)\n",
+    "#available = IBMQ.backends(operational=True, simulator=False)\n",
+    "#print(available)\n",
+    "start = time.time()\n",
+    "print(-end+start)\n",
+    "#least_busy = least_busy(available)\n",
+    "least_busy = IBMQ.get_backend('ibmq_16_melbourne')\n",
+    "end = time.time()\n",
+    "print(end-start)\n",
+    "couplingMap = least_busy.configuration().coupling_map\n",
+    "print(couplingMap)\n",
+    "start = time.time()\n",
+    "print(-end+start)\n",
+    "qubitsSize = least_busy.configuration().n_qubits\n",
+    "print(qubitsSize)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "IBMQ.save_account('f5819f434faf55109be4d80d68984a810895c78102f2702d2851169dc7f9aa18ac03ce2e357e896df27f59455cc0f897faf4ab6ee599c2f23a16f01f521fbfb2')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1.0533034801483154\n",
+      "0.0\n",
+      "0.0\n",
+      "[[1, 0], [1, 2], [2, 3], [4, 3], [4, 10], [5, 4], [5, 6], [5, 9], [6, 8], [7, 8], [9, 8], [9, 10], [11, 3], [11, 10], [11, 12], [12, 2], [13, 1], [13, 12]]\n",
+      "0.0\n",
+      "14\n"
      ]
     }
    ],
@@ -89,10 +91,12 @@
     "end = time.time()\n",
     "print(end-start)\n",
     "\n",
-    "couplingMap = least_busy.configuration()[\"coupling_map\"]\n",
+    "couplingMap = least_busy.configuration().coupling_map\n",
+    "print(couplingMap)\n",
     "start = time.time()\n",
     "print(-end+start)\n",
-    "qubitsSize = least_busy.configuration()[\"n_qubits\"]"
+    "qubitsSize = least_busy.configuration().n_qubits\n",
+    "print(qubitsSize)"
    ]
   },
   {
