minor changes, now reset function works properly??

--- a/CtgExperiments.ipynb
+++ b/CtgExperiments.ipynb
@@ -34,7 +34,15 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1, 0], [2, 0], [2, 1], [3, 2], [3, 4], [4, 2]]\n"
+     ]
+    }
+   ],
    "source": [
     "#select a backend\n",
     "IBMQ.load_accounts()\n",
@@ -44,6 +52,7 @@
     "#least_busy = BasicAer.get_backend('qasm_simulator')\n",
     "#least_busy = IBMQ.get_backend('ibmq_16_melbourne')\n",
     "couplingMap = least_busy.configuration().coupling_map\n",
+    "print(couplingMap)\n",
     "qubitsSize = least_busy.configuration().n_qubits\n"
    ]
   },
@@ -117,21 +126,7 @@
       "\n",
       "The circuit has no garbage lines in it or file parsed incorrectly, check ioclass\n",
       "The circuit has no constant inputs lines in it or file parsed incorrectly, check ioclass\n",
-      "{'b': {'a', 'c'}, 'a': {'c', 'b'}, 'c': {'a', 'e', 'd', 'b'}, 'd': {'c', 'e'}, 'e': {'d', 'c'}}\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\marshmallow\\schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
-      "  ChangedInMarshmallow3Warning\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
+      "{'b': {'a', 'c'}, 'a': {'b', 'c'}, 'c': {'b', 'e', 'a', 'd'}, 'd': {'e', 'c'}, 'e': {'c', 'd'}}\n",
       "{'000': 200}\n",
       "Self skeleton is ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc']\n",
       "Missing connections are []\n",
@@ -143,7 +138,7 @@
       "FIxing the stuff\n",
       "{'000': 200}\n",
       "{'010': 200}\n",
-      "Self skeleton is ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc', 'ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc', 'ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc']\n",
+      "Self skeleton is ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc']\n",
       "Missing connections are []\n",
       "b\n",
       "a\n",
@@ -152,6 +147,14 @@
       "e\n",
       "FIxing the stuff\n",
       "{'010': 200}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\marshmallow\\schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
+      "  ChangedInMarshmallow3Warning\n"
      ]
     }
    ],
