--- a/addNoise.ipynb
+++ b/addNoise.ipynb
@@ -2,15 +2,25 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\marshmallow\\schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
+      "  ChangedInMarshmallow3Warning\n",
+      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\qiskit\\providers\\ibmq\\credentials\\_configrc.py:129: UserWarning: Credentials already present. Set overwrite=True to overwrite.\n",
+      "  warnings.warn('Credentials already present. Set overwrite=True to overwrite.')\n"
+     ]
+    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1.1999268531799316\n",
-      "0.0009889602661132812\n",
+      "0.9991750717163086\n",
+      "0.0\n",
       "0.0\n",
       "[[1, 0], [1, 2], [2, 3], [4, 3], [4, 10], [5, 4], [5, 6], [5, 9], [6, 8], [7, 8], [9, 8], [9, 10], [11, 3], [11, 10], [11, 12], [12, 2], [13, 1], [13, 12]]\n",
       "0.0\n",
