--- a/CtgExperiments.ipynb
+++ b/CtgExperiments.ipynb
@@ -175,9 +175,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (QiskitDevenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "qiskitdevenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -189,7 +189,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
