--- a/CtgExperiments.ipynb
+++ b/CtgExperiments.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\marshmallow\\schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
+      "/usr/lib64/python3.6/site-packages/marshmallow/schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
       "  ChangedInMarshmallow3Warning\n"
      ]
     }
@@ -70,7 +70,6 @@
     "    backend_sim = BasicAer.get_backend('qasm_simulator')\n",
     "    error_count = 0\n",
     "    ctg = CircuitTransitionGraph()\n",
-    "    print(ctg.setCoupling(couplingMap))\n",
     "    print(ctg.transformCoupling(couplingMap))\n",
     "    ctg.setSize(size)\n",
     "    for i in range(0,2):\n",
@@ -127,15 +126,18 @@
       "\n",
       "The circuit has no garbage lines in it or file parsed incorrectly, check ioclass\n",
       "The circuit has no constant inputs lines in it or file parsed incorrectly, check ioclass\n",
-      "['ba', 'ca', 'cb', 'dc', 'de', 'ec']\n",
-      "{'b': {'a', 'c'}, 'a': {'c', 'b'}, 'c': {'a', 'e', 'b', 'd'}, 'd': {'e', 'c'}, 'e': {'c', 'd'}}\n"
+      "{'b': {'a', 'c'}, 'a': {'b', 'c'}, 'c': {'d', 'a', 'b', 'e'}, 'd': {'e', 'c'}, 'e': {'d', 'c'}}\n"
      ]
     },
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\marshmallow\\schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
+      "/usr/lib64/python3.6/site-packages/marshmallow/schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
+      "  ChangedInMarshmallow3Warning\n",
+      "/usr/lib64/python3.6/site-packages/marshmallow/schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
+      "  ChangedInMarshmallow3Warning\n",
+      "/usr/lib64/python3.6/site-packages/marshmallow/schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
       "  ChangedInMarshmallow3Warning\n"
      ]
     },
@@ -146,11 +148,37 @@
       "{'000': 200}\n",
       "Self skeleton is ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc']\n",
       "Missing connections are []\n",
+      "b\n",
+      "a\n",
+      "c\n",
+      "d\n",
+      "e\n",
       "FIxing the stuff\n",
-      "{'000': 200}\n",
+      "{'000': 200}\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/usr/lib64/python3.6/site-packages/marshmallow/schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
+      "  ChangedInMarshmallow3Warning\n",
+      "/usr/lib64/python3.6/site-packages/marshmallow/schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
+      "  ChangedInMarshmallow3Warning\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
       "{'010': 200}\n",
-      "Self skeleton is ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc']\n",
+      "Self skeleton is ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc', 'ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc', 'ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc']\n",
       "Missing connections are []\n",
+      "b\n",
+      "a\n",
+      "c\n",
+      "d\n",
+      "e\n",
       "FIxing the stuff\n",
       "{'010': 200}\n"
      ]
@@ -173,9 +201,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python (QiskitDevenv)",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "qiskitdevenv"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -187,7 +215,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.1"
+   "version": "3.6.7"
   }
  },
  "nbformat": 4,
