--- a/CtgExperiments.ipynb
+++ b/CtgExperiments.ipynb
@@ -9,7 +9,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/usr/lib64/python3.6/site-packages/marshmallow/schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
+      "C:\\Users\\krylo\\Anaconda3\\lib\\site-packages\\marshmallow\\schema.py:364: ChangedInMarshmallow3Warning: strict=False is not recommended. In marshmallow 3.0, schemas will always be strict. See https://marshmallow.readthedocs.io/en/latest/upgrading.html#schemas-are-always-strict\n",
       "  ChangedInMarshmallow3Warning\n"
      ]
     }
@@ -22,6 +22,8 @@
     "from qiskit.tools.visualization import plot_histogram\n",
     "from qiskit.providers.ibmq import least_busy\n",
     "from math import pi\n",
+    "from qiskit.mapper._layout import Layout as l\n",
+    "from qiskit.tools.compiler import compile as qcompile\n",
     "import matplotlib.pyplot as plt\n",
     "import sys\n",
     "from qiskit.tools.visualization import circuit_drawer\n",
@@ -39,7 +41,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[[1, 0], [2, 0], [2, 1], [3, 2], [3, 4], [4, 2]]\n"
+      "[[1, 0], [1, 2], [2, 3], [4, 3], [4, 10], [5, 4], [5, 6], [5, 9], [6, 8], [7, 8], [9, 8], [9, 10], [11, 3], [11, 10], [11, 12], [12, 2], [13, 1], [13, 12]]\n"
      ]
     }
    ],
@@ -58,10 +60,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
+    "def prepareBadLayout(qReg):\n",
+    "    global couplingMap\n",
+    "    \n",
+    "    t = {    (qReg.name, 1): (qReg.name, 0),(qReg.name, 0): (qReg.name, 1), (qReg.name, 2): (qReg.name, 2)}\n",
+    "    q = l(t)\n",
+    "    return q\n",
+    "\n",
     "def bigFunction(fileName):\n",
     "    ioClass = readCircuitInformation(fileName) \n",
     "    answers = ioClass.getKmap()\n",
@@ -69,14 +78,18 @@
     "    ioClass.readGatesFromFile(fileName)\n",
     "    backend_sim = BasicAer.get_backend('qasm_simulator')\n",
     "    error_count = 0\n",
+    "    \n",
     "    ctg = CircuitTransitionGraph()\n",
     "    print(ctg.transformCoupling(couplingMap))\n",
     "    ctg.setSize(size)\n",
-    "    for i in range(0,2):\n",
+    "\n",
+    "    for i in range(0,1):\n",
     "        #This part corresponds for part of experiment without minimal or no changes\n",
     "        qr,cr,qc = ioClass.createCircuitAndSetInput(i)\n",
     "        qc,qr = ctg.readGatesFromIOClass(qr,qc, ioClass)\n",
-    "        measureFidelityWithoutChanges(qr,cr,qc)\n",
+    "        print(qr)\n",
+    "        badLayout = prepareBadLayout(qr)\n",
+    "        measureFidelityWithoutChanges(qr,cr,qc,badLayout)\n",
     "        \n",
     "        #This part corresponds for part of experiment after significant changes\n",
     "        qr,cr,qc = ioClass.createCircuitAndSetInput(i)\n",
@@ -93,12 +106,15 @@
     "    return ctg\n",
     "\n",
     "\n",
-    "def measureFidelityWithoutChanges(qr,cr,qc):\n",
-    "    least_busy = BasicAer.get_backend('qasm_simulator')\n",
+    "def measureFidelityWithoutChanges(qr,cr,qc,bad_layout):\n",
+    "    #least_busy = BasicAer.get_backend('qasm_simulator')\n",
     "    qc.measure(qr,cr)\n",
-    "    job = execute(qc,least_busy,shots=200)\n",
-    "    result = job.result()\n",
-    "    print(result.get_counts())\n",
+    "    print(qc.qasm())\n",
+    "    qobj = qcompile(qc,least_busy,initial_layout=bad_layout,pass_manager=None)\n",
+    "    print(qobj.experiments[0].header.as_dict()[\"compiled_circuit_qasm\"])\n",
+    "    #job = execute(qc,least_busy,shots=200)\n",
+    "    #result = job.result()\n",
+    "    #print(result.get_counts())\n",
     "    #plot_histogram(result.get_counts())\n",
     "\n",
     "    \n",
@@ -114,7 +130,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -125,20 +141,244 @@
       "The constants are set to .constants ---\n",
       "\n",
       "The circuit has no garbage lines in it or file parsed incorrectly, check ioclass\n",
-      "The circuit has no constant inputs lines in it or file parsed incorrectly, check ioclass\n"
-     ]
-    },
-    {
-     "ename": "NameError",
-     "evalue": "name 'lement' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-4-28fbe0e6c789>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0;31m#if testFromFile(filename) == 0:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0mfileName\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mtestDir\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mfileName\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 4\u001b[0;31m \u001b[0mbigFunction\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mfileName\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[0;32m<ipython-input-3-16d463673c6f>\u001b[0m in \u001b[0;36mbigFunction\u001b[0;34m(fileName)\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0merror_count\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;36m0\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      8\u001b[0m     \u001b[0mctg\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mCircuitTransitionGraph\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 9\u001b[0;31m     \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mctg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mtransformCoupling\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcouplingMap\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     10\u001b[0m     \u001b[0mctg\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msetSize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0msize\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     11\u001b[0m     \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;32m~/codes/circuit-graph/CircuitTransitionGraph.py\u001b[0m in \u001b[0;36mtransformCoupling\u001b[0;34m(self, maList)\u001b[0m\n\u001b[1;32m    201\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0mtransformCoupling\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0mmaList\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    202\u001b[0m         \u001b[0;32mfor\u001b[0m \u001b[0melement\u001b[0m \u001b[0;32min\u001b[0m  \u001b[0mmaList\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 203\u001b[0;31m             \u001b[0;32mif\u001b[0m \u001b[0;34m(\u001b[0m\u001b[0mlement\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m>\u001b[0m \u001b[0melement\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    204\u001b[0m                 \u001b[0mkey\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melement\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"a\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mchr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0melement\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m+\u001b[0m\u001b[0mord\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"a\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    205\u001b[0m             \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'lement' is not defined"
+      "The circuit has no constant inputs lines in it or file parsed incorrectly, check ioclass\n",
+      "['ab', 'bc', 'cd', 'de', 'ek', 'ef', 'fg', 'fj', 'gi', 'hi', 'ij', 'jk', 'dl', 'kl', 'lm', 'cm', 'bn', 'mn']\n",
+      "QuantumRegister(3, 'q2')\n",
+      "OPENQASM 2.0;\n",
+      "include \"qelib1.inc\";\n",
+      "qreg q2[3];\n",
+      "creg c2[3];\n",
+      "cx q2[0],q2[1];\n",
+      "h q2[0];\n",
+      "h q2[1];\n",
+      "cx q2[0],q2[1];\n",
+      "h q2[0];\n",
+      "h q2[1];\n",
+      "cx q2[0],q2[1];\n",
+      "cx q2[1],q2[2];\n",
+      "h q2[1];\n",
+      "h q2[2];\n",
+      "cx q2[1],q2[2];\n",
+      "h q2[1];\n",
+      "h q2[2];\n",
+      "cx q2[1],q2[2];\n",
+      "cx q2[0],q2[1];\n",
+      "h q2[0];\n",
+      "h q2[1];\n",
+      "cx q2[0],q2[1];\n",
+      "h q2[0];\n",
+      "h q2[1];\n",
+      "cx q2[0],q2[1];\n",
+      "tdg q2[1];\n",
+      "h q2[2];\n",
+      "cx q2[2],q2[1];\n",
+      "t q2[1];\n",
+      "tdg q2[2];\n",
+      "cx q2[2],q2[1];\n",
+      "h q2[2];\n",
+      "cx q2[0],q2[1];\n",
+      "h q2[0];\n",
+      "h q2[1];\n",
+      "cx q2[0],q2[1];\n",
+      "h q2[0];\n",
+      "h q2[1];\n",
+      "cx q2[0],q2[1];\n",
+      "tdg q2[1];\n",
+      "h q2[2];\n",
+      "cx q2[2],q2[1];\n",
+      "t q2[1];\n",
+      "tdg q2[2];\n",
+      "cx q2[2],q2[1];\n",
+      "h q2[2];\n",
+      "cx q2[0],q2[1];\n",
+      "h q2[2];\n",
+      "cx q2[2],q2[1];\n",
+      "t q2[2];\n",
+      "tdg q2[1];\n",
+      "cx q2[2],q2[1];\n",
+      "h q2[2];\n",
+      "t q2[1];\n",
+      "cx q2[0],q2[1];\n",
+      "cx q2[1],q2[2];\n",
+      "h q2[1];\n",
+      "h q2[2];\n",
+      "cx q2[1],q2[2];\n",
+      "h q2[1];\n",
+      "h q2[2];\n",
+      "cx q2[1],q2[2];\n",
+      "cx q2[0],q2[1];\n",
+      "h q2[0];\n",
+      "h q2[1];\n",
+      "cx q2[0],q2[1];\n",
+      "h q2[0];\n",
+      "h q2[1];\n",
+      "cx q2[0],q2[1];\n",
+      "cx q2[2],q2[1];\n",
+      "cx q2[1],q2[2];\n",
+      "cx q2[0],q2[2];\n",
+      "cx q2[2],q2[1];\n",
+      "measure q2[0] -> c2[0];\n",
+      "measure q2[1] -> c2[1];\n",
+      "measure q2[2] -> c2[2];\n",
+      "\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000020A540EACF8>\n",
+      "CouplingGraph is [(1, 0), (1, 2), (2, 3), (4, 3), (4, 10), (5, 4), (5, 6), (5, 9), (6, 8), (9, 8), (9, 10), (7, 8), (11, 3), (11, 10), (11, 12), (12, 2), (13, 1), (13, 12)]\n",
+      "Circuit_graph is  <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000020A540EACF8>\n",
+      "Final Layout is {(QuantumRegister(3, 'q2'), 0): (QuantumRegister(14, 'q'), 1), (QuantumRegister(3, 'q2'), 1): (QuantumRegister(14, 'q'), 0), (QuantumRegister(3, 'q2'), 2): (QuantumRegister(14, 'q'), 2)}\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000020A54105048>\n",
+      "OPENQASM 2.0;\n",
+      "include \"qelib1.inc\";\n",
+      "qreg q[14];\n",
+      "creg c2[3];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[2];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[2];\n",
+      "cx q[1],q[2];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[2];\n",
+      "cx q[1],q[2];\n",
+      "u2(0,pi) q[1];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "cx q[1],q[2];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[2];\n",
+      "cx q[1],q[2];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[2];\n",
+      "cx q[1],q[2];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "u1(-pi/4) q[0];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "cx q[1],q[2];\n",
+      "u3(-pi/4,pi/2,3*pi/2) q[1];\n",
+      "u3(pi/4,pi/2,3*pi/2) q[2];\n",
+      "cx q[1],q[2];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "u3(pi/4,pi/2,3*pi/2) q[1];\n",
+      "cx q[1],q[2];\n",
+      "u3(-pi/4,pi/2,3*pi/2) q[1];\n",
+      "u3(pi/4,pi/2,3*pi/2) q[2];\n",
+      "cx q[1],q[2];\n",
+      "cx q[1],q[0];\n",
+      "cx q[1],q[2];\n",
+      "u3(pi/4,pi/2,3*pi/2) q[1];\n",
+      "u3(-pi/4,pi/2,3*pi/2) q[2];\n",
+      "cx q[1],q[2];\n",
+      "u3(-pi/4,pi/2,3*pi/2) q[1];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "cx q[1],q[2];\n",
+      "u2(0,pi) q[2];\n",
+      "u2(0,pi) q[1];\n",
+      "cx q[1],q[2];\n",
+      "u2(0,pi) q[2];\n",
+      "u2(0,pi) q[1];\n",
+      "cx q[1],q[2];\n",
+      "u2(0,pi) q[2];\n",
+      "u2(0,pi) q[1];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "cx q[1],q[2];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[2];\n",
+      "cx q[1],q[2];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "cx q[1],q[2];\n",
+      "u2(0,pi) q[2];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[0];\n",
+      "cx q[1],q[0];\n",
+      "u2(0,pi) q[1];\n",
+      "cx q[1],q[2];\n",
+      "u2(0,pi) q[1];\n",
+      "u2(0,pi) q[2];\n",
+      "barrier q[0],q[1],q[2];\n",
+      "measure q[2] -> c2[2];\n",
+      "measure q[1] -> c2[1];\n",
+      "measure q[0] -> c2[0];\n",
+      "\n",
+      "Self skeleton is ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ac', 'bc']\n",
+      "Missing connections are [['a', 'c']]\n",
+      "b\n",
+      "a\n",
+      "c\n",
+      "d\n",
+      "e\n",
+      "k\n",
+      "f\n",
+      "g\n",
+      "j\n",
+      "i\n",
+      "h\n",
+      "l\n",
+      "m\n",
+      "n\n",
+      "Paths to a c\n",
+      "Trace is\n",
+      "[['a', 'b', 'c'], ['a', 'b', 'n', 'm', 'c'], ['a', 'b', 'n', 'm', 'l', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'i', 'g', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'j', 'f', 'e', 'd', 'c'], ['a', 'b', 'n', 'm', 'l', 'k', 'e', 'd', 'c']]\n",
+      "['c', 'b'] ['a', 'c']\n",
+      "['b', 'c'] ['a', 'c']\n",
+      "['a', 'c'] ['a', 'c']\n",
+      "replaceTo ['a', 'b', 'c']\n",
+      "sw a b\n",
+      "['a', 'b']\n",
+      "fixed skeleton ['ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc', 'bc', 'ab', 'ab', 'bc', 'ab', 'bc', 'bc', 'ab', 'bc']\n",
+      "FIxing the stuff\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000020A53FDE080>\n",
+      "MaDAGCircuit is <qiskit.dagcircuit._dagcircuit.DAGCircuit object at 0x0000020A53E68E48>\n",
+      "{'000': 200}\n"
      ]
     }
    ],
@@ -148,6 +388,13 @@
     "fileName = testDir+fileName\n",
     "bigFunction(fileName)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -173,7 +420,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.7"
+   "version": "3.7.1"
   }
  },
  "nbformat": 4,
